Small changes to paper

--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -892,6 +892,11 @@ o29 : Time
 As seen in several examples above, when the exact answer is not found, a list containing the endpoints of an interval containing the $F$-pure threshold of $f$ is returned.
 Whether that interval is open, closed, or a mixed interval depends on the options passed (it will be \emph{open} whenever \texttt{Attempts} is set to at least \texttt{3}); if the option \texttt{Verbose} is set to true, the precise interval will be printed.
 
+\pedro[inline]{
+   Maybe the example below could be omitted, to shorten the paper.
+   I think that just telling the reader that the interval is printed when Verbose is activated is enough.
+}
+
 \bigskip
 {\small
 \setstretch{.67}
